--- a/Account.html
+++ b/Account.html
@@ -102,8 +102,9 @@
                 </ul>
             </div>
         </div>
+        
         <hr>
-       <p class="Condition">Condition of Use:<span>Privacy Policy</span></p>
+        <p class="Condition">Copywrite by @ RAKESH GODUMALA</p>
     </div>
 </div>
 
