--- a/product.html
+++ b/product.html
@@ -371,7 +371,7 @@
             </div>
         </div>
         <hr>
-       <p class="Condition">Condition of Use:<span>Privacy Policy</span></p>
+        <p class="Condition">Copywrite by @ RAKESH GODUMALA</p>
     </div>
 </div>
 
