--- a/cart.html
+++ b/cart.html
@@ -149,7 +149,7 @@
             </div>
         </div>
         <hr>
-        <p class="Condition">Copywrite by @ RAKESH GODUMALA</p>
+       <p class="Condition">Condition of Use:<span>Privacy Policy</span></p>
     </div>
 </div>
 
