--- a/src/Account.html
+++ b/src/Account.html
@@ -105,7 +105,7 @@
         </div>
         
         <hr>
-        <p class="Condition">Copywrite by @ RAKESH GODUMALA</p>
+        <p class="Condition">&#169; Copywrite by RAKESH GODUMALA</p>
     </div>
 </div>
 
