--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -423,7 +423,7 @@
             </div> 
         </div>
         <hr>
-       <p class="Condition">Copywrite by @ RAKESH GODUMALA</p>
+       <p class="Condition">&#169; Copywrite by RAKESH GODUMALA</p>
     </div>
 </div>
 
