--- a/src/index.html
+++ b/src/index.html
@@ -414,7 +414,7 @@
             <div class="footer-col-4">
                 <h3>Follow Us</h3>
                 <ul>
-                  <li><span class="bi bi-linkedin"></span>&nbsp linkedin</li>                
+                 <li><span class="bi bi-linkedin"></span> &nbsp linkedin</a></li>                       
                   <li><span class="bi bi-facebook"></span>&nbsp Facebook</li>
                   <li><span class="bi bi-twitter"></span>&nbsp Twitter</li>
                   <li> <span class="bi bi-instagram"></span> &nbsp Instagram</li>
