--- a/src/index.html
+++ b/src/index.html
@@ -194,7 +194,7 @@
             </div>
 
             <div class="col-4">
-                <img class="image13" img src="images/Product-10.jpg">
+                <img class="image13" img src="images/product-10.jpg">
                 <h4>Sports Shoes </h4>
                 <div class="ratting">
                     <span class="bi bi-star-fill" style="color:#00e426;"></span>
