--- a/src/Account.html
+++ b/src/Account.html
@@ -21,8 +21,8 @@
                     <li><span class="bi bi-house-door"></span><a href="index.html">&nbsp HOME </a></li>
                     <li><a href="product.html">PRODUCT</a></li>
                     <li><a href="">ABOUT</a></li>
-                    <li><span class="bi bi-telephone"></span> <a href="">CONTACT</a></li>
-                    <li><a href="Account.html">ACCOUNT</a></li>
+                    <li><a href="">CONTACT</a></li>
+                    <li><span class="bi bi-person"></span><a href="Account.html">&nbsp; ACCOUNT</a></li>
                 </ul>
             </nav>
             <a href="cart.html"> <img src="images/cart.png" width="30px"height="30px"></a>
@@ -95,17 +95,17 @@
             <div class="footer-col-4">
                 <h3>Follow Us</h3>
                 <ul>
-                    <li><span class="bi bi-linkedin"></span>&nbsp linkedin</li>                
-                    <li><span class="bi bi-facebook"></span>&nbsp Facebook</li>
-                    <li><span class="bi bi-twitter"></span>&nbsp Twitter</li>
-                    <li> <span class="bi bi-instagram"></span> &nbsp Instagram</li>
-                    <li> <span class="bi bi-whatsapp"></span> &nbsp Whats-App</li>
-                </ul>
+                    <li><span class="bi bi-linkedin"></span> &nbsp; linkedin</li>                
+                    <li><span class="bi bi-facebook"></span> &nbsp;Facebook</li>
+                    <li><span class="bi bi-twitter"></span> &nbsp; Twitter</li>
+                    <li> <span class="bi bi-instagram"></span> &nbsp; Instagram</li>
+                    <li> <span class="bi bi-whatsapp"></span> &nbsp; Whats-App</li>
+                 </ul>
             </div>
         </div>
         
         <hr>
-        <p class="Condition">&#169; Copywrite by RAKESH GODUMALA</p>
+        <p class="Condition">&copy; Copywrite by Rakesh Godumala</p>
     </div>
 </div>
 
