--- a/src/product detail.html
+++ b/src/product detail.html
@@ -94,20 +94,20 @@
     <div class="small-container">
         <div class="row">
             <div class="col-4">
-                <img class="image12" img src="images/fashion.jpg">
-                <h4>jacket</h4>
-                <div class="ratting">
+                <img class="image6" img src="images/fashion.jpg">
+                <h4>Men Jacket </h4> 
+                   <div class="ratting">
                     <span class="bi bi-star-fill" style="color:#00e426;"></span>
                     <span class="bi bi-star-fill" style="color:#00e426;"></span>
                     <span class="bi bi-star-fill" style="color:#00e426;"></span>
                     <span class="bi bi-star-fill" style="color:#00e426;"></span>
                     <span class="bi bi-star-fill" style="color:#00e426;"></span>
                   </div>
-                <p> ₹ 299.00</p>
+                <p> ₹ 699.00</p>
             </div>
             <div class="col-4">
                 <img class="image13" img src="images/same1.jfif">
-                <h4>Shirt </h4>
+                <h4>Branded Shirt </h4>
                 <div class="ratting">
                     <span class="bi bi-star-fill" style="color:#00e426;"></span>
                     <span class="bi bi-star-fill" style="color:#00e426;"></span>
@@ -125,13 +125,14 @@
                     <span class="bi bi-star-fill" style="color:#00e426;"></span>
                     <span class="bi bi-star-fill" style="color:#00e426;"></span>
                     <span class="bi bi-star-fill" style="color:#00e426;"></span>
-                    <span class="bi bi-star-fill" style="color:#00e426;"></span>    
+                    <span class="bi bi-star-half" style="color:#00e426;"></span>   
                   </div>
-                <p> ₹ 299.00</p>
+                <p> ₹ 500.00</p>
             </div>
+
             <div class="col-4">
-                <img class="image15" img src="images/boys mode.jfif">
-                <h4>Boys Fashion</h4>
+                <img class="image7" img src="images/boys mode.jfif">
+                <h4>Men Stylish brand</h4>
                 <div class="ratting">
                     <span class="bi bi-star-fill" style="color:#00e426;"></span>
                     <span class="bi bi-star-fill" style="color:#00e426;"></span>
@@ -139,8 +140,8 @@
                     <span class="bi bi-star-fill" style="color:#00e426;"></span>
                     <span class="bi bi-star-fill" style="color:#00e426;"></span>
                   </div>
-                <p> ₹ 200.00</p>
-                </div>
+                <p> ₹ 799.00</p>
+            </div>
         </div>
     </div>
    
