--- a/src/index.html
+++ b/src/index.html
@@ -222,7 +222,7 @@
 
             <div class="col-4">
                 <img class="image15" img src="images/product-12.jpg">
-                <h4>Puma Causal Pant</h4>
+                <h4>Nike Pyjama </h4>
                 <div class="ratting">
                     <span class="bi bi-star-fill" style="color:#00e426;"></span>
                     <span class="bi bi-star-fill" style="color:#00e426;"></span>
@@ -230,7 +230,7 @@
                     <span class="bi bi-star-fill" style="color:#00e426;"></span>
                     <span class="bi bi-star-fill" style="color:#00e426;"></span>
                   </div>
-                <p> ₹ 800.00</p>
+                <p> ₹ 899.00</p>
              </div>
 
         </div>
@@ -288,7 +288,7 @@
                   </div>
                 <p> ₹ 599.00</p>
             </div>
-            
+
         </div>
 
     </div>
