--- a/src/product.html
+++ b/src/product.html
@@ -255,7 +255,7 @@
 
             <div class="col-4">
                 <img class="image15" img src="images/product-12.jpg">
-                <h4>Puma Causal Pant</h4>
+                <h4>Nike Pyjama </h4>
                 <div class="ratting">
                     <span class="bi bi-star-fill" style="color:#00e426;"></span>
                     <span class="bi bi-star-fill" style="color:#00e426;"></span>
