online shopping edit

--- a/src/Account.html
+++ b/src/Account.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>All Products-Virtual | Online Product</title>
+    <title>All Products-Online Shopping | App</title>
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="./node_modules/bootstrap-icons/font/bootstrap-icons.css">
  
