--- a/src/index.html
+++ b/src/index.html
@@ -348,7 +348,7 @@
                 </div> 
                 <div class="col-3">
                     <span class="bi bi-stars" style="color:#4aa0ca"></span>  
-                    <p>Elon Musk is the Co-Founder and CEO of Twitter,Tesla and SpaceX. Musk is working to transportation both on Earth, through electric car maker Tesla and in space, via Rocket Producer SpaceX.</p>
+                    <p>Elon Musk is the Co-Founder and CEO of oTesla and SpaceX. Musk is working to transportation both on Earth, through electric car maker Tesla and in space, via Rocket Producer SpaceX.</p>
                     <div class="ratting">
                         <span class="bi bi-star-fill" style="color:#549bbe"></span>  
                         <span class="bi bi-star-fill" style="color:#549bbe"></span>  
