--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
             <div class="col-2">
               <h1>Give your Workout<br>The New Style!</h1>
             <p><h2>Amazing Discount are Available... </h2> <br>Success is not final, failure is not fatal: it is the courage to continue that counts. <br> Greatness will come</p>
-           <a href="" class="btn">Explore Now &#x27A4;</a>
+           <a href="product.html" class="btn">Explore Now &#x27A4;</a>
             </div>
         <div class="col-2">
                    <img src="images/khiladi.png">
@@ -308,7 +308,7 @@
                         The Bluetooth Boat 255 Pro is the best bluetooth as compare <br> to Oppo Bluetooth 300. It's a Navy Blue <br>
                         It is Verified Product by company
                     </small> <br>
-                    <a href=""class="btn">Buy Now &#x27A4;</a>
+                    <a href="https://www.boat-lifestyle.com/products/boat-rockerz-255-pro-plus?variant=39420996321378&currency=INR&gclid=CjwKCAjwg5uZBhATEiwAhhRLHklhSUWWb2MZs9e5zR_RsRa-C9Gr9I5pE0VtU2Q4748M1Zgk9hNV-hoCF0wQAvD_BwE"class="btn">Buy Now &#x27A4;</a>
                 </div>
             </div>
         </div>
@@ -417,7 +417,7 @@
             <div class="footer-col-4">
                 <h3>Follow Us</h3>
                 <ul>
-                    <li><span class="bi bi-linkedin"></span> &nbsp;linkedin</li>               
+                    <li> <span class="bi bi-linkedin"></span> &nbsp; linkedin</li>               
                     <li><span class="bi bi-facebook"></span> &nbsp;Facebook</li>
                     <li><span class="bi bi-twitter"></span> &nbsp; Twitter</li>
                     <li> <span class="bi bi-instagram"></span> &nbsp; Instagram</li>
@@ -434,7 +434,7 @@
 
 <script>
     var MenuItems = document.getElementById("MenuItems");
-
+////////
     MenuItems.style.maxHeight="0px";
     
     function menutoggle(){
